Fix wrong padding of offers on demand

--- a/app/assets/stylesheets/atomic/molecules/_offer.scss
+++ b/app/assets/stylesheets/atomic/molecules/_offer.scss
@@ -3,15 +3,15 @@
   margin: auto;
   padding: 0;
 
-  @media (max-width: 576px) {
-    padding: 0 15px 30px;
-  }
-
   .offerWrapper {
     height: 100%;
     justify-content: flex-start;
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 576px) {
+      padding: 0 15px 30px;
+    }
   }
 
   .offerImage__wrapper {
@@ -49,6 +49,10 @@
     color: $color__gray-main;
     text-transform: none;
     font-weight: 400;
+  }
+
+  .offerTag {
+    margin-top: 8px;
   }
 
   .offerLocation {
